kubernetes/deployment-book-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-v1
  labels:
    version: v1
    app: book
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book
  template:
    metadata:
      labels:
        version: v1
        app: book
    spec:
      containers:
        - name: book
          image: claudioed/tracking
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            privileged: false
          livenessProbe:
            httpGet:
              path: /book
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
          readinessProbe:
            httpGet:
              path: /book
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
