kubernetes/book-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: book
  labels:
    expose: "true"
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: book
