kubernetes/book-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "virtual-service-gateway-auth-poc"
spec:
  hosts:
    - "*"
  gateways:
    - "auth-poc-gateway"
  http:
    - match:
        - uri:
            prefix: /book
      route:
        - destination:
            host: "book"
            port:
              number: 8080
